feat(analysis): add same-tree move focus